build the library after installation through npm

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "main": "lib/handlebars.js",
   "bin": {
     "handlebars": "bin/handlebars"
+  },
+  "scripts": {
+    "install": "rake release"
   }
 }
